// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`toMatchSnapshot errors should throw if arguments are in the wrong order: right spot 1`] = `
{
  "a": "oops",
}
`;

exports[`it will create a snapshot file if it doesn't exist 1`] = `
{
  "a": {
    "b": {
      "c": Any<Boolean>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will create a snapshot file if it doesn't exist 2`] = `
{
  "a": {
    "b": {
      "c": Any<String>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will create a snapshot file if it doesn't exist 3`] = `
{
  "a": {
    "b": {
      "c": Any<Number>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will create a snapshot file if it doesn't exist 4`] = `
{
  "a": {
    "b": {
      "c": Any<BigInt>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will create a snapshot file if it doesn't exist 5`] = `
{
  "a": Any<Date>,
}
`;

exports[`it will create a snapshot file if it doesn't exist 6`] = `
{
  "a": "any",
  "b": Any<String>,
  "j": Any<Number>,
}
`;

exports[`it will create a snapshot file if it doesn't exist 7`] = `
{
  "a": "any",
  "b": Any<String>,
  "j": Any<RegExp>,
}
`;

exports[`Temporal values serialize as their default toString in snapshots 1`] = `Temporal.PlainDate 2020-01-02`;

exports[`Temporal values serialize as their default toString in snapshots 2`] = `
{
  "dateTime": Temporal.PlainDateTime 1901-02-03T04:05:06.007008009,
  "duration": Temporal.Duration PT1H30M,
  "instant": Temporal.Instant 1973-07-22T23:57:25.566778899Z,
  "monthDay": Temporal.PlainMonthDay 01-15,
  "time": Temporal.PlainTime 10:20:23,
  "yearMonth": Temporal.PlainYearMonth 2020-01,
  "zoned": Temporal.ZonedDateTime 2020-01-01T00:00:00-10:00[Pacific/Honolulu],
}
`;
